--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,32 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgba(48, 47, 47, 0.925);
+  color: #FFF;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+main{
+  width: 500px;
+  margin: 220px auto;
+  height: 400px;
+}
+p{
+  font-size: 25px;
+
+}
+.row > *{
+  padding: 0;
+}
+.my-col{
+  height: 150px;
+  display: flex;
+  align-items: center;
+  border: 1px solid white;
+  justify-content: center;
+  font-size: 30px;
+  cursor: pointer;
 }
